# what-a-todo

./: .gitignore  Cargo.toml  Dockerfile.app  Dockerfile.web  README.md  docker-compose.yml  package-lock.json  settings.toml  trunk.toml
.github/: CODEOWNERS
crates/api/: Cargo.toml
crates/api/src/: routers.rs
crates/api/src/controllers/: greetings.rs  mod.rs  tasks.rs  user.rs
crates/api/src/models/: requests.rs  responses.rs
crates/app/migrations/: 19700101000000_initial.sql
crates/app/src/: main.rs
crates/app/tests/: greetings_test.rs
crates/domain/: Cargo.toml
crates/domain/src/: errors.rs
crates/domain/src/models/: greeting.rs  mod.rs  status.rs  task.rs  user.rs
crates/domain/src/repositories/: greeting_repository.rs  mod.rs  task_repository.rs  user_repository.rs
crates/domain/src/services/: mod.rs  service_registry.rs  task_service.rs  user_service.rs
crates/filesystem/src/: in_memory.rs  lib.rs  local.rs
crates/settings/: Cargo.toml
crates/settings/src/: settings.rs
crates/web/: Cargo.toml  index.html
crates/web/src/: app.rs  main.rs  router.rs
crates/web/src/components/: login_form.rs  mod.rs  signup_form.rs
crates/web/src/pages/: home.rs  login.rs  mod.rs  signup.rs
documents/: system-design-document.md
