[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.70"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
wasm-logger = "0.2.0"
web-sys = "0.3.70"
yew = { version = "0.21.0", features = ["csr"] }
yew-bootstrap = "0.10.1"
yew-router = "0.18.0"
log = "0.4.22"
